Fix issue with arrow not displayed on mobile

--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -127,11 +127,6 @@ main .hero.with-down-arrow > div:first-of-type p picture::after {
   border-left: 20px solid transparent;
 }
 
-main .hero.with-down-arrow > div:first-of-type p:last-of-type picture::before,
-main .hero.with-down-arrow > div:first-of-type p:last-of-type picture::after {
-  bottom: 19px;
-}
-
 main .hero > div:first-of-type p > picture {
   display: none;
 }
